Registering new user

--- a/app/assets/stylesheets/biovision/admin/layout.scss
+++ b/app/assets/stylesheets/biovision/admin/layout.scss
@@ -73,23 +73,8 @@ h2 {
   padding: var(--spacer-xs);
 }
 
-.breadcrumbs {
-  margin-bottom: var(--spacer-xs);
-
-  a {
-    background: image_url('biovision/icons/breadcrumb.svg') no-repeat bottom .1rem right / .6rem 1.2rem;
-    padding-right: 1rem;
-    transition: background .25s;
-
-    &:active,
-    &:focus,
-    &:hover {
-      background-image: image_url('biovision/icons/breadcrumb-hover.svg');
-    }
-  }
-}
-
 @import "biovision/components/forms";
+@import "biovision/components/breadcrumbs";
 @import "biovision/components/lists";
 @import "biovision/components/buttons";
 @import "biovision/components/messages";
