Using custom validator for User

--- a/app/views/components/users/_join_form.html.erb
+++ b/app/views/components/users/_join_form.html.erb
@@ -17,7 +17,7 @@
               class: 'input-text',
               data: { check: :screen_name },
               maxlength: 30,
-              pattern: '^[-_a-z0-9A-Z]+$',
+              # pattern: '^[-_a-z0-9A-Z]+$',
               placeholder: User.human_attribute_name(:screen_name),
               required: true,
               size: nil
