--- a/app/views/my/profiles/new.html.erb
+++ b/app/views/my/profiles/new.html.erb
@@ -8,7 +8,7 @@
     <%=
       render(
         partial: 'components/users/form_tabs',
-        locals: { current: 'join' }
+        locals: { current: 'join', entity: @entity }
       )
     %>
   </div>
