--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -16,7 +16,7 @@
 
     <figure>
       <div class="image">
-        <%= user_image_profile(user) %>
+        <%= simple_image_medium(user) %>
       </div>
       <figcaption><%= user.profile_name %></figcaption>
     </figure>
