--- a/app/views/admin/components/links/_users.html.erb
+++ b/app/views/admin/components/links/_users.html.erb
@@ -1,11 +1,4 @@
-<% if handler.allow?('view', 'edit') %>
-<!--  <li><%#= render 'admin/users/nav_item' %></li>-->
-<!--  <li><%#= render 'admin/foreign_users/nav_item' %></li>-->
-<% end %>
-<% if handler.administrator? %>
+<li><%= render 'admin/users/nav_item' %></li>
 <!--  <li><%#= render 'admin/login_attempts/nav_item' %></li>-->
 <!--  <li><%#= render 'admin/tokens/nav_item' %></li>-->
-<% end %>
-<% if handler.allow?('manage_codes') %>
 <!--  <li><%#= render 'admin/codes/nav_item' %></li>-->
-<% end %>
