Displaying public profile

--- a/app/assets/stylesheets/biovision/themes/default_theme/components/users.scss
+++ b/app/assets/stylesheets/biovision/themes/default_theme/components/users.scss
@@ -1,1 +1,2 @@
 @import "biovision/themes/default_theme/components/users/form_tabs";
+@import "biovision/themes/default_theme/components/users/profile";
