--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -2,23 +2,7 @@
   <%= render partial: 'shared/list_of_errors', locals: { entity: entity } %>
 
   <dl class="fields">
-    <div>
-      <dt><%= f.label :image %></dt>
-      <dd>
-        <figure id="user-image" role="group" class="image-medium">
-          <%= f.label(:image, image_tag(entity.image.small.url)) %>
-          <figcaption>
-            <%=
-              f.file_field(
-                :image,
-                accept: 'image/jpeg,image/png,image/svg+xml',
-                data: { image: 'user-image' }
-              )
-            %>
-          </figcaption>
-        </figure>
-      </dd>
-    </div>
+    <%= render partial: 'components/users/form/image', locals: { f: f, entity: entity } %>
 
     <% unless entity.id.nil? %>
       <%= render partial: 'shared/forms/field', locals: { f: f, field: :slug } %>
