--- a/app/assets/stylesheets/biovision/components/lists.scss
+++ b/app/assets/stylesheets/biovision/components/lists.scss
@@ -40,7 +40,7 @@
     }
 
     .data {
-      width: 100%;
+      flex: 1;
       position: relative;
 
       .info {
@@ -82,6 +82,7 @@ ol.list-of-entities {
   > li[data-number]::before {
     content: attr(data-number) ":";
     display: inline-block;
+    flex: none;
     margin: 0 var(--spacer-xs) 0 0;
     text-align: right;
     width: 2.4rem;
