--- a/app/assets/stylesheets/biovision/components/messages.scss
+++ b/app/assets/stylesheets/biovision/components/messages.scss
@@ -17,6 +17,14 @@ $messages-border-success: hsl(120, 75%, 25%) !default;
   max-width: var(--content-width);
   padding: var(--spacer-s) var(--spacer-s) var(--spacer-s) calc(3.2rem + var(--spacer-s) * 2);
 
+  p:first-of-type {
+    margin-top: 0;
+  }
+
+  p:last-of-type {
+    margin-bottom: 0;
+  }
+
   &:empty {
     display: none;
   }
