--- a/app/views/admin/components/links/_content.html.erb
+++ b/app/views/admin/components/links/_content.html.erb
@@ -1,3 +1,9 @@
 <li><%= render 'admin/navigation_groups/nav_item' %></li>
 <li><%= render 'admin/dynamic_blocks/nav_item' %></li>
 <li><%= render 'admin/dynamic_pages/nav_item' %></li>
+<%=
+  render(
+    partial: 'admin/components/links/extra/content',
+    locals: { handler: handler }
+  )
+%>
