Added flexibility to meta texts

--- a/app/views/components/content/_dynamic_page.html.erb
+++ b/app/views/components/content/_dynamic_page.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, entity.name %>
+<%= render partial: 'shared/entity/metadata', locals: { entity: @dynamic_page } %>
 <% content_for :breadcrumbs do %>
   <span><%= entity.name %></span>
 <% end %>
