--- a/app/views/shared/entity/_metadata.html.erb
+++ b/app/views/shared/entity/_metadata.html.erb
@@ -1,13 +1,18 @@
 <% unless entity.nil? %>
-  <% content_for(:meta_title, entity.meta_title) unless entity.meta_title.blank? %>
-  <% content_for(:meta_keywords, entity.meta_keywords) unless entity.meta_keywords.blank? %>
-  <% content_for(:meta_description, entity.meta_description) unless entity.meta_description.blank? %>
-  <% if entity.respond_to?(:image) && !entity.image.blank? %>
-    <% content_for :meta_image, (request.protocol + request.host_with_port + entity.image.url) %>
-    <% content_for :meta_image_alt, entity.image_alt_text if entity.respond_to?(:image_alt_text) %>
-  <% end %>
+  <%
+    content_for :meta_title, entity.meta('title')
+    content_for :meta_description, entity.meta('description')
+    content_for :meta_keywords, entity.meta('keywords')
+    if entity.respond_to?(:image_metadata)
+      image = entity.image_metadata
+      unless image[:url].blank?
+        content_for :meta_image, request.protocol + request.host_with_port + image[:url]
+        content_for :meta_image_alt, image[:alt]
+      end
+    end
+  %>
   <% content_for :meta_twitter do %>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:description" content="<%= entity.meta_description %>"/>
+    <meta name="twitter:description" content="<%= entity.meta('description') %>"/>
   <% end %>
 <% end %>
