--- a/app/views/components/users/_join_form.html.erb
+++ b/app/views/components/users/_join_form.html.erb
@@ -17,7 +17,7 @@
       %>
     <% end %>
     <div class="fields">
-      <% unless handler.settings['email_as_login'] %>
+      <% unless handler.email_as_login? || handler.phone_as_login? %>
         <div>
           <label class="floating-label">
             <%=
@@ -42,6 +42,30 @@
         </div>
       <% end %>
 
+      <% if handler.use_phone? %>
+        <div>
+          <label class="floating-label">
+            <%=
+              f.telephone_field(
+                :phone,
+                class: 'input-text',
+                data: { check: :phone },
+                maxlength: User::PHONE_LIMIT,
+                placeholder: User.human_attribute_name(:phone),
+                required: handler.require_phone?,
+                size: nil,
+                value: handler.attribute(:phone)
+              )
+            %>
+            <span><%= User.human_attribute_name(:email) %></span>
+          </label>
+          <div class="check-result-error" data-field="email"></div>
+          <% unless handler.email_as_login? %>
+            <div class="guideline"><%= t('activerecord.guidelines.user.email') %></div>
+          <% end %>
+        </div>
+    <% end %>
+
       <div>
         <label class="floating-label">
           <%=
@@ -59,7 +83,7 @@
           <span><%= User.human_attribute_name(:email) %></span>
         </label>
         <div class="check-result-error" data-field="email"></div>
-        <% unless handler.settings['email_as_login'] %>
+        <% unless handler.email_as_login? %>
           <div class="guideline"><%= t('activerecord.guidelines.user.email') %></div>
         <% end %>
       </div>
