--- a/app/views/admin/dynamic_pages/_form.html.erb
+++ b/app/views/admin/dynamic_pages/_form.html.erb
@@ -9,6 +9,7 @@
     <%= render partial: 'shared/forms/simple_image', locals: { f: f } %>
     <%= render partial: 'shared/forms/text_area', locals: { f: f, field: :body } %>
     <%= render partial: 'shared/forms/entity_flags', locals: { f: f } %>
+    <%= render partial: 'shared/forms/meta_texts', locals: { f: f } %>
   </dl>
 
   <%= render 'shared/forms/state_container' %>
