--- a/app/assets/stylesheets/biovision/components/forms.scss
+++ b/app/assets/stylesheets/biovision/components/forms.scss
@@ -184,7 +184,8 @@ form {
     transition: .25s;
   }
 
-  input:not(:placeholder-shown) + span {
+  input:not(:placeholder-shown) + span,
+  textarea:not(:placeholder-shown) + span {
     opacity: 1;
     top: .2rem;
   }
@@ -205,6 +206,10 @@ form {
     margin-right: var(--spacer-xxs);
     outline: none;
     width: 1.6rem;
+
+    &[type=radio] {
+      border-radius: 50%;
+    }
 
     &:focus {
       box-shadow: .2rem .2rem .2rem var(--input-border-focus);
