Added pagination to default admin theme

--- a/app/assets/stylesheets/biovision/admin/layout.scss
+++ b/app/assets/stylesheets/biovision/admin/layout.scss
@@ -80,4 +80,5 @@ h2 {
 @import "biovision/components/messages";
 @import "biovision/components/simple_image";
 @import "biovision/components/toggleable";
+@import "biovision/components/pagination";
 @import "biovision/admin/components";
