Using roles instead of component privileges

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
 <%= render 'layouts/admin/header' %>
-
+<%= controller_name %>/<%= action_name %>
 <main id="main">
   <%= render 'shared/flash_messages' %>
   <%= render 'layouts/admin/breadcrumbs' %>
