--- a/app/views/admin/components/_list.html.erb
+++ b/app/views/admin/components/_list.html.erb
@@ -1,7 +1,7 @@
 <% collection.each do |component| %>
   <%
     handler = Biovision::Components::BaseComponent.handler(component, current_user)
-    next if handler.component.nil? || !handler.allow?
+    next if handler.component.nil? || !handler.permit?
   %>
   <%=
     render(
