--- a/app/views/shared/entity/_tree_caches.html.erb
+++ b/app/views/shared/entity/_tree_caches.html.erb
@@ -7,6 +7,13 @@
 <% unless entity.children_cache.blank? %>
   <div>
     <dt><%= entity.class.human_attribute_name(:children_cache) %></dt>
-    <dd><%= entity.children_cache.join(', ') %></dd>
+    <dd>
+      <details>
+        <summary><%= t(:object_count, count: entity.children_cache.count) %></summary>
+        <div class="secondary-data">
+          <%= entity.children_cache.join(', ') %>
+        </div>
+      </details>
+    </dd>
   </div>
 <% end %>
