--- a/app/views/admin/components/entity/_links.html.erb
+++ b/app/views/admin/components/entity/_links.html.erb
@@ -1,14 +1,12 @@
 <nav class="biovision-component-nav">
-  <% if handler.permit?('settings') %>
-    <% if handler.use_parameters? || handler.component.settings.any? %>
-      <%=
-        link_to(
-            t('admin.components.settings.nav_text'),
-            admin_component_settings_path(slug: handler.slug),
-            class: 'settings'
-        )
-      %>
-    <% end %>
+  <% if handler.manage_settings? && handler.permit?('settings.view') %>
+    <%=
+      link_to(
+        t('admin.components.settings.nav_text'),
+        admin_component_settings_path(slug: handler.slug),
+        class: 'settings'
+      )
+    %>
   <% end %>
 
   <% prefix = 'admin/components/links/' %>
@@ -16,8 +14,8 @@
     <ul class="biovision-component-links">
       <%=
         render(
-            partial: "#{prefix}#{handler.slug}",
-            locals: { handler: handler }
+          partial: "#{prefix}#{handler.slug}",
+          locals: { handler: handler }
         )
       %>
     </ul>
