--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -13,10 +13,22 @@
   <% end %>
 
   <nav class="entity-actions">
-    <%= edit_icon(@entity) %>
+    <%= edit_icon(@entity) if component_handler.permit?('edit', @entity) %>
     <%= world_icon(@entity) %>
-    <%= destroy_icon(@entity) %>
+    <%= destroy_icon(@entity) if component_handler.permit?('destroy', @entity) %>
   </nav>
+
+  <% if current_user.super_user? %>
+    <nav>
+      <%=
+        link_to(
+          "#{t('admin.users.roles.nav_text')} (#{@entity.role_ids.count})",
+          roles_admin_user_path,
+          class: 'button button-ghost'
+        )
+      %>
+    </nav>
+  <% end %>
 
   <%= render partial: 'admin/users/entity/fields', locals: { entity: @entity } %>
 
