--- a/app/assets/stylesheets/biovision/vars.scss
+++ b/app/assets/stylesheets/biovision/vars.scss
@@ -50,4 +50,9 @@
   --input-border-focus: #{$input-border-focus};
   --input-border-invalid: #{$input-border-invalid};
   --input-border-invalid-focus: #{$input-border-invalid-focus};
+
+  --layout-bg-body: #{$layout-bg-body};
+  --layout-bg-footer: #{$layout-bg-footer};
+  --layout-bg-header: #{$layout-bg-header};
+  --layout-bg-main: #{$layout-bg-main};
 }
