--- a/sample/app/assets/stylesheets/shared.scss
+++ b/sample/app/assets/stylesheets/shared.scss
@@ -34,10 +34,10 @@
 //$border-primary: .1rem solid $border-color-primary;
 //$border-secondary: .1rem solid $border-color-secondary;
 
-//$background-body: #f4f4f4 linear-gradient(to top, #f4f4f4, #dfdedc) no-repeat center / cover;
-//$background-header: #fff;
-//$background-main: #fff;
-//$background-footer: #fff;
+//$layout-bg-body: #f4f4f4 linear-gradient(to top, #f4f4f4, #dfdedc) no-repeat center / cover;
+//$layout-bg-header: #fff;
+//$layout-bg-main: #fff;
+//$layout-bg-footer: #fff;
 
 //$link-color: rgb(20, 127, 255);
 //$link-color-visited: rgb(20, 77, 250);
