Added quick search; using ACL for components

--- a/app/assets/stylesheets/biovision/admin/components.scss
+++ b/app/assets/stylesheets/biovision/admin/components.scss
@@ -58,4 +58,13 @@
   }
 }
 
+@import "biovision/components/forms";
+@import "biovision/components/breadcrumbs";
+@import "biovision/components/lists";
+@import "biovision/components/buttons";
+@import "biovision/components/messages";
+@import "biovision/components/simple_image";
+@import "biovision/components/toggleable";
+@import "biovision/components/pagination";
+@import "biovision/components/quick_search";
 @import "biovision/admin/components/users";
