--- a/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
+++ b/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
@@ -3,8 +3,10 @@
 
   <%= render(partial: 'shared/admin/toggle', locals: { entity: entity }) %>
 
-  <div class="entity-actions">
-    <%= edit_icon(entity) %>
-    <%= destroy_icon(entity) %>
-  </div>
+  <% if local_assigns[:handler] && handler.permit?('edit', entity) %>
+    <div class="entity-actions">
+      <%= edit_icon(entity) %>
+      <%= destroy_icon(entity) %>
+    </div>
+  <% end %>
 </div>
