--- a/app/views/admin/dynamic_blocks/show.html.erb
+++ b/app/views/admin/dynamic_blocks/show.html.erb
@@ -8,10 +8,12 @@
 <article>
   <h1><%= @entity.class.model_name.human %> <q><%= @entity.slug %></q></h1>
 
-  <nav class="entity-actions">
-    <%= edit_icon(@entity) %>
-    <%= destroy_icon(@entity) %>
-  </nav>
+  <% if component_handler.permit?('edit', @entity) %>
+    <nav class="entity-actions">
+      <%= edit_icon(@entity) %>
+      <%= destroy_icon(@entity) %>
+    </nav>
+  <% end %>
 
   <dl class="fields">
     <%= render partial: 'shared/entity/slug', locals: { entity: @entity } %>
