--- a/app/views/admin/navigation_groups/entity/_in_list.html.erb
+++ b/app/views/admin/navigation_groups/entity/_in_list.html.erb
@@ -5,8 +5,10 @@
     <%= t(:page_count, count: entity.dynamic_pages_count) %>
   </div>
 
-  <div class="entity-actions">
-    <%= edit_icon(entity) %>
-    <%= destroy_icon(entity) %>
-  </div>
+  <% if local_assigns[:handler] && handler.permit?('edit', entity) %>
+    <div class="entity-actions">
+      <%= edit_icon(entity) %>
+      <%= destroy_icon(entity) %>
+    </div>
+  <% end %>
 </div>
