--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,9 +7,18 @@
 <article>
   <h1><%= t('.heading') %></h1>
 
-  <nav class="entity-actions">
-    <%= create_icon(new_admin_user_path) %>
-  </nav>
+  <% if component_handler.permit?('users.edit') %>
+    <nav class="entity-actions">
+      <%= create_icon(new_admin_user_path) %>
+    </nav>
+  <% end %>
 
-  <%= render partial: 'shared/admin/list', locals: { collection: @collection } %>
+  <%=
+    render(
+      partial: 'admin/widgets/quick_search',
+      locals: { endpoint: search_admin_users_url }
+    )
+  %>
+
+  <%= render partial: 'shared/admin/list', locals: { collection: @collection, handler: component_handler } %>
 </article>
