--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -15,7 +15,7 @@
   <nav class="entity-actions">
     <%= edit_icon(@entity) if component_handler.permit?('edit', @entity) %>
     <%= world_icon(@entity) %>
-    <%= destroy_icon(@entity) if component_handler.permit?('destroy', @entity) %>
+    <%= destroy_icon(@entity) if component_handler.permit?('edit', @entity) %>
   </nav>
 
   <% if current_user.super_user? %>
