Displaying components for users

--- a/app/assets/stylesheets/biovision/components.scss
+++ b/app/assets/stylesheets/biovision/components.scss
@@ -2,5 +2,6 @@
 @import "biovision/components/forms";
 @import "biovision/components/hamburger";
 @import "biovision/components/lists";
+@import "biovision/components/messages";
 @import "biovision/components/pagination";
 @import "biovision/components/breadcrumbs";
