--- a/app/views/components/content/_dynamic_page.html.erb
+++ b/app/views/components/content/_dynamic_page.html.erb
@@ -8,7 +8,7 @@
     <div class="content-wrapper">
       <h1><%= entity.meta('heading') %></h1>
 
-      <% if content_component.editable?(entity) %>
+      <% if content_component.permit?('edit', entity) %>
         <nav class="entity-actions">
           <%= gear_icon(entity) %>
           <%= edit_icon(entity) %>
