Sending feedback messages

--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -100,7 +100,7 @@
       <%= button_tag(t('.submit'), class: 'button button-primary') %>
     </div>
   </div>
-  <div class="state-2">
+  <div class="state-2 hidden">
     <div class="result">
       <p><%= raw message %></p>
     </div>
