--- a/app/views/my/index/index.html.erb
+++ b/app/views/my/index/index.html.erb
@@ -29,6 +29,15 @@
         class: 'button button-ghost'
       )
     %>
+    <% if current_user.role?('base.admin') %>
+      <%=
+        link_to(
+          t('admin.index.index.nav_text'),
+          admin_path,
+          class: 'button button-secondary'
+        )
+      %>
+    <% end %>
   </nav>
 
   <% prefix = 'my/components/' %>
