Added magic filters

--- a/app/assets/stylesheets/biovision/admin/components.scss
+++ b/app/assets/stylesheets/biovision/admin/components.scss
@@ -67,4 +67,5 @@
 @import "biovision/components/toggleable";
 @import "biovision/components/pagination";
 @import "biovision/components/quick_search";
+@import "biovision/components/filters";
 @import "biovision/admin/components/users";
